fixed layout issues

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -144,7 +144,7 @@
         font-style: italic;
     }
 
-    #classes {
+    #classes-link {
         float: none;
     }
 
